--- a/twitchRec.ipynb
+++ b/twitchRec.ipynb
@@ -1794,31 +1794,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 319,
+   "execution_count": 384,
    "metadata": {},
    "outputs": [],
    "source": [
     "# add all user-streamer pair for BPR\n",
-    "watchedTrain = set()\n",
-    "for d in train:\n",
-    "    watchedTrain.add((d['user_id'],d['streamer_name']))"
+    "watchedAll = set()\n",
+    "for d in data:\n",
+    "    watchedAll.add((d['user_id'],d['streamer_name']))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 321,
+   "execution_count": 388,
    "metadata": {},
    "outputs": [],
    "source": [
-    "userIDsTrain,streamer_nameIDsTrain = {},{} \n",
-    "for u,s in watchedTrain:\n",
-    "    if not u in userIDsTrain: userIDsTrain[u] = len(userIDsTrain)\n",
-    "    if not s in streamer_nameIDsTrain: streamer_nameIDsTrain[s] = len(streamer_nameIDsTrain)"
+    "userIDsAll,streamer_nameIDsAll = {},{} \n",
+    "for u,s in watchedAll:\n",
+    "    if not u in userIDsAll: userIDsAll[u] = len(userIDsAll)\n",
+    "    if not s in streamer_nameIDsAll: streamer_nameIDsAll[s] = len(streamer_nameIDsAll)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 306,
+   "execution_count": 398,
    "metadata": {
     "scrolled": true
    },
@@ -1828,9 +1828,9 @@
     "    def __init__(self, K, lamb):\n",
     "        super(BPRbatch, self).__init__()\n",
     "        # Initialize variables\n",
-    "        self.betaI = tf.Variable(tf.random.normal([len(streamer_nameIDsTrain)],stddev=0.001))\n",
-    "        self.gammaU = tf.Variable(tf.random.normal([len(userIDsTrain),K],stddev=0.001))\n",
-    "        self.gammaI = tf.Variable(tf.random.normal([len(streamer_nameIDsTrain),K],stddev=0.001))\n",
+    "        self.betaI = tf.Variable(tf.random.normal([len(streamer_nameIDsAll)],stddev=0.001))\n",
+    "        self.gammaU = tf.Variable(tf.random.normal([len(userIDsAll),K],stddev=0.001))\n",
+    "        self.gammaI = tf.Variable(tf.random.normal([len(streamer_nameIDsAll),K],stddev=0.001))\n",
     "        # Regularization coefficient\n",
     "        self.lamb = lamb\n",
     "\n",
@@ -1862,7 +1862,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 308,
+   "execution_count": 399,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1871,22 +1871,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 309,
+   "execution_count": 406,
    "metadata": {},
    "outputs": [],
    "source": [
     "def trainingStepBPR(model, interactions):\n",
-    "    Nsamples = 50000\n",
+    "    Nsamples = 10000 #50000\n",
     "    with tf.GradientTape() as tape:\n",
     "        sampleU, sampleI, sampleJ = [], [], []\n",
     "        for _ in range(Nsamples):\n",
-    "            u,i = random.choice(interactions) # positive sample (watchedTrain)\n",
+    "            u,i = random.choice(interactions) # positive sample (watchedAll)\n",
     "            j = random.choice(list(uniqueStreamers)) # negative sample\n",
     "            while j in streamerPerUserTrain[u]:\n",
     "                j = random.choice(list(uniqueStreamers))\n",
-    "            sampleU.append(userIDsTrain[u])\n",
-    "            sampleI.append(streamer_nameIDsTrain[i])\n",
-    "            sampleJ.append(streamer_nameIDsTrain[j])\n",
+    "            sampleU.append(userIDsAll[u])\n",
+    "            sampleI.append(streamer_nameIDsAll[i])\n",
+    "            sampleJ.append(streamer_nameIDsAll[j])\n",
     "            \n",
     "        loss = model(sampleU,sampleI,sampleJ)\n",
     "        loss += model.reg()\n",
@@ -1899,43 +1899,114 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 325,
+   "execution_count": 407,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(162624, 162624)"
+      ]
+     },
+     "execution_count": 407,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "len(uniqueStreamers), len(streamer_nameIDsAll)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 408,
    "metadata": {
     "scrolled": true
    },
    "outputs": [
     {
-     "ename": "TypeError",
-     "evalue": "tuple indices must be integers or slices, not str",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
-      "\u001b[1;32m/Users/garrettlam/Documents/GitHub/twitchRec/twitchRec.ipynb Cell 48\u001b[0m line \u001b[0;36m3\n\u001b[1;32m      <a href='vscode-notebook-cell:/Users/garrettlam/Documents/GitHub/twitchRec/twitchRec.ipynb#Y224sZmlsZQ%3D%3D?line=0'>1</a>\u001b[0m modelBPR \u001b[39m=\u001b[39m BPRbatch(\u001b[39m3\u001b[39m, \u001b[39m0.00001\u001b[39m)\n\u001b[1;32m      <a href='vscode-notebook-cell:/Users/garrettlam/Documents/GitHub/twitchRec/twitchRec.ipynb#Y224sZmlsZQ%3D%3D?line=1'>2</a>\u001b[0m \u001b[39mfor\u001b[39;00m i \u001b[39min\u001b[39;00m \u001b[39mrange\u001b[39m(\u001b[39m100\u001b[39m):\n\u001b[0;32m----> <a href='vscode-notebook-cell:/Users/garrettlam/Documents/GitHub/twitchRec/twitchRec.ipynb#Y224sZmlsZQ%3D%3D?line=2'>3</a>\u001b[0m     obj \u001b[39m=\u001b[39m trainingStepBPR(modelBPR, \u001b[39mlist\u001b[39;49m(watchedTrain))\n\u001b[1;32m      <a href='vscode-notebook-cell:/Users/garrettlam/Documents/GitHub/twitchRec/twitchRec.ipynb#Y224sZmlsZQ%3D%3D?line=3'>4</a>\u001b[0m     \u001b[39mif\u001b[39;00m (i \u001b[39m%\u001b[39m \u001b[39m10\u001b[39m \u001b[39m==\u001b[39m \u001b[39m9\u001b[39m): \u001b[39mprint\u001b[39m(\u001b[39m\"\u001b[39m\u001b[39miteration \u001b[39m\u001b[39m\"\u001b[39m \u001b[39m+\u001b[39m \u001b[39mstr\u001b[39m(i\u001b[39m+\u001b[39m\u001b[39m1\u001b[39m) \u001b[39m+\u001b[39m \u001b[39m\"\u001b[39m\u001b[39m, objective = \u001b[39m\u001b[39m\"\u001b[39m \u001b[39m+\u001b[39m \u001b[39mstr\u001b[39m(obj))\n",
-      "\u001b[1;32m/Users/garrettlam/Documents/GitHub/twitchRec/twitchRec.ipynb Cell 48\u001b[0m line \u001b[0;36m7\n\u001b[1;32m      <a href='vscode-notebook-cell:/Users/garrettlam/Documents/GitHub/twitchRec/twitchRec.ipynb#Y224sZmlsZQ%3D%3D?line=4'>5</a>\u001b[0m \u001b[39mfor\u001b[39;00m _ \u001b[39min\u001b[39;00m \u001b[39mrange\u001b[39m(Nsamples):\n\u001b[1;32m      <a href='vscode-notebook-cell:/Users/garrettlam/Documents/GitHub/twitchRec/twitchRec.ipynb#Y224sZmlsZQ%3D%3D?line=5'>6</a>\u001b[0m     positive_interaction \u001b[39m=\u001b[39m random\u001b[39m.\u001b[39mchoice(interactions) \u001b[39m# positive sample\u001b[39;00m\n\u001b[0;32m----> <a href='vscode-notebook-cell:/Users/garrettlam/Documents/GitHub/twitchRec/twitchRec.ipynb#Y224sZmlsZQ%3D%3D?line=6'>7</a>\u001b[0m     u \u001b[39m=\u001b[39m positive_interaction[\u001b[39m'\u001b[39;49m\u001b[39muser_id\u001b[39;49m\u001b[39m'\u001b[39;49m]\n\u001b[1;32m      <a href='vscode-notebook-cell:/Users/garrettlam/Documents/GitHub/twitchRec/twitchRec.ipynb#Y224sZmlsZQ%3D%3D?line=7'>8</a>\u001b[0m     i \u001b[39m=\u001b[39m positive_interaction[\u001b[39m'\u001b[39m\u001b[39mstreamer_name\u001b[39m\u001b[39m'\u001b[39m]\n\u001b[1;32m      <a href='vscode-notebook-cell:/Users/garrettlam/Documents/GitHub/twitchRec/twitchRec.ipynb#Y224sZmlsZQ%3D%3D?line=8'>9</a>\u001b[0m     j \u001b[39m=\u001b[39m random\u001b[39m.\u001b[39mchoice(\u001b[39mlist\u001b[39m(uniqueStreamers)) \u001b[39m# negative sample\u001b[39;00m\n",
-      "\u001b[0;31mTypeError\u001b[0m: tuple indices must be integers or slices, not str"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "iteration 10, objective = 0.48308247\n",
+      "iteration 20, objective = 0.47053945\n",
+      "iteration 30, objective = 0.44939584\n",
+      "iteration 40, objective = 0.4501586\n",
+      "iteration 50, objective = 0.4527099\n",
+      "iteration 60, objective = 0.44800907\n",
+      "iteration 70, objective = 0.44351602\n",
+      "iteration 80, objective = 0.44241333\n",
+      "iteration 90, objective = 0.43552172\n",
+      "iteration 100, objective = 0.43790388\n"
      ]
     }
    ],
    "source": [
     "modelBPR = BPRbatch(3, 0.00001)\n",
     "for i in range(100):\n",
-    "    obj = trainingStepBPR(modelBPR, list(watchedTrain))\n",
+    "    obj = trainingStepBPR(modelBPR, list(watchedAll))\n",
     "    if (i % 10 == 9): print(\"iteration \" + str(i+1) + \", objective = \" + str(obj))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 409,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.8603096309630963"
+      ]
+     },
+     "execution_count": 409,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "pred = modelBPR.predict(userIDs[u], itemIDs[g]).numpy()\n",
-    "print(pred)\n",
-    "if pred > 0.45:\n",
-    "    pred = 1\n",
-    "else:\n",
-    "    pred = 0"
+    "nUserStreamers = 0\n",
+    "p1 = 0\n",
+    "correct = 0\n",
+    "for (label,sample) in [(1, watchedValid), (0, notWatchedValid)]:\n",
+    "    for (u,s) in sample:\n",
+    "        nUserStreamers +=1\n",
+    "        pred = 0\n",
+    "\n",
+    "        # cold-start user, use popularity \n",
+    "        # if u not in userIDsTrain:\n",
+    "        #     print('user not seen')\n",
+    "        #     if len(usersPerGameTrain[g]) > 64:\n",
+    "        #         pred = 1\n",
+    "        #         p1 +=1 \n",
+    "        #else:\n",
+    "        rank = modelBPR.predict(userIDsAll[u], streamer_nameIDsAll[s]).numpy()\n",
+    "        if rank > 0.46:\n",
+    "            pred = 1\n",
+    "            p1 +=1 \n",
+    "        if pred == label:\n",
+    "            correct += 1\n",
+    "correct / (len(watchedValid) + len(notWatchedValid))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 410,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(320361, 512889, 833250)"
+      ]
+     },
+     "execution_count": 410,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "p1, nUserStreamers - p1, nUserStreamers"
    ]
   },
   {
