--- a/twitchRec.ipynb
+++ b/twitchRec.ipynb
@@ -1965,6 +1965,7 @@
     }
    ],
    "source": [
+    "# BPR model\n",
     "nUserStreamers = 0\n",
     "p1 = 0\n",
     "correct = 0\n",
@@ -2007,6 +2008,54 @@
    ],
    "source": [
     "p1, nUserStreamers - p1, nUserStreamers"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'watchedValid' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[1;32m/Users/garrettlam/Documents/GitHub/twitchRec/twitchRec.ipynb Cell 52\u001b[0m line \u001b[0;36m9\n\u001b[1;32m      <a href='vscode-notebook-cell:/Users/garrettlam/Documents/GitHub/twitchRec/twitchRec.ipynb#Y265sZmlsZQ%3D%3D?line=6'>7</a>\u001b[0m p1 \u001b[39m=\u001b[39m \u001b[39m0\u001b[39m  \n\u001b[1;32m      <a href='vscode-notebook-cell:/Users/garrettlam/Documents/GitHub/twitchRec/twitchRec.ipynb#Y265sZmlsZQ%3D%3D?line=7'>8</a>\u001b[0m correct \u001b[39m=\u001b[39m \u001b[39m0\u001b[39m\n\u001b[0;32m----> <a href='vscode-notebook-cell:/Users/garrettlam/Documents/GitHub/twitchRec/twitchRec.ipynb#Y265sZmlsZQ%3D%3D?line=8'>9</a>\u001b[0m \u001b[39mfor\u001b[39;00m (label,sample) \u001b[39min\u001b[39;00m [(\u001b[39m1\u001b[39m, watchedValid), (\u001b[39m0\u001b[39m, notWatchedValid)]:\n\u001b[1;32m     <a href='vscode-notebook-cell:/Users/garrettlam/Documents/GitHub/twitchRec/twitchRec.ipynb#Y265sZmlsZQ%3D%3D?line=9'>10</a>\u001b[0m     \u001b[39mfor\u001b[39;00m (u,s) \u001b[39min\u001b[39;00m sample:\n\u001b[1;32m     <a href='vscode-notebook-cell:/Users/garrettlam/Documents/GitHub/twitchRec/twitchRec.ipynb#Y265sZmlsZQ%3D%3D?line=10'>11</a>\u001b[0m         nUserStreamers \u001b[39m+\u001b[39m\u001b[39m=\u001b[39m\u001b[39m1\u001b[39m\n",
+      "\u001b[0;31mNameError\u001b[0m: name 'watchedValid' is not defined"
+     ]
+    }
+   ],
+   "source": [
+    "# Tune BPR Threshold:\n",
+    "thresholds = [0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8, 0.9]\n",
+    "bpr_accs = []\n",
+    "\n",
+    "for threshold in thresholds:\n",
+    "    nUserStreamers = 0\n",
+    "    p1 = 0  \n",
+    "    correct = 0\n",
+    "    for (label,sample) in [(1, watchedValid), (0, notWatchedValid)]:\n",
+    "        for (u,s) in sample:\n",
+    "            nUserStreamers +=1\n",
+    "            pred = 0\n",
+    "            rank = modelBPR.predict(userIDsAll[u], streamer_nameIDsAll[s]).numpy()\n",
+    "            if rank > threshold:\n",
+    "                pred = 1\n",
+    "                p1 +=1 \n",
+    "            if pred == label:\n",
+    "                correct += 1\n",
+    "    bpr_accs.append( (correct / (len(watchedValid)+len(notWatchedValid)), threshold, p1, nUserStreamers-p1 ) )"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "bpr_accs"
    ]
   },
   {
