--- a/twitchRec.ipynb
+++ b/twitchRec.ipynb
@@ -2,9 +2,18 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 208,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/Users/garrettlam/miniconda3/envs/cse158/lib/python3.11/site-packages/tqdm/auto.py:21: TqdmWarning: IProgress not found. Please update jupyter and ipywidgets. See https://ipywidgets.readthedocs.io/en/stable/user_install.html\n",
+      "  from .autonotebook import tqdm as notebook_tqdm\n"
+     ]
+    }
+   ],
    "source": [
     "import gzip\n",
     "import pandas as pd\n",
@@ -32,7 +41,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 209,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -174,7 +183,7 @@
        "[3051733 rows x 5 columns]"
       ]
      },
-     "execution_count": 209,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -187,7 +196,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 210,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -201,7 +210,7 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 210,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -212,7 +221,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 211,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -223,7 +232,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 212,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -233,7 +242,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 222,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -387,7 +396,7 @@
        "[731 rows x 6 columns]"
       ]
      },
-     "execution_count": 222,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -399,7 +408,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 223,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -566,7 +575,7 @@
        "[3051002 rows x 6 columns]"
       ]
      },
-     "execution_count": 223,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -579,7 +588,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 243,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -637,7 +646,7 @@
        "Name: count, dtype: int64"
       ]
      },
-     "execution_count": 243,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -648,7 +657,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 225,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -677,7 +686,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 226,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -789,7 +798,7 @@
        "max    1.000000e+05  3.441642e+10  6.147000e+04  6.148000e+04  4.800000e+02"
       ]
      },
-     "execution_count": 226,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -800,7 +809,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 227,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -809,7 +818,7 @@
        "(100000, 739972, 162624)"
       ]
      },
-     "execution_count": 227,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -821,7 +830,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 244,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -863,7 +872,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 294,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -882,7 +891,7 @@
        "Text(0.5, 0, 'Number of Unique Streamers')"
       ]
      },
-     "execution_count": 294,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -909,7 +918,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 295,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -931,7 +940,7 @@
        " Name: count, Length: 156, dtype: int64)"
       ]
      },
-     "execution_count": 295,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -942,7 +951,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 283,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -961,7 +970,7 @@
        "Text(0.5, 0, 'Number of Times Watched')"
       ]
      },
-     "execution_count": 283,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -991,7 +1000,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 289,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -1057,7 +1066,7 @@
        " Name: count, dtype: int64)"
       ]
      },
-     "execution_count": 289,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1068,7 +1077,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 288,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -1087,7 +1096,7 @@
        "Text(0.5, 0, 'Time Spent (minutes)')"
       ]
      },
-     "execution_count": 288,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -1112,7 +1121,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 291,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -1171,7 +1180,7 @@
        " Name: count, dtype: int64)"
       ]
      },
-     "execution_count": 291,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1182,7 +1191,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 228,
+   "execution_count": 19,
    "metadata": {
     "scrolled": true
    },
@@ -1338,7 +1347,7 @@
        "[3051002 rows x 6 columns]"
       ]
      },
-     "execution_count": 228,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1351,7 +1360,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 229,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1361,7 +1370,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 232,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1398,7 +1407,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 233,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1409,7 +1418,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 234,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
@@ -1418,7 +1427,7 @@
        "(3051002, 915301, 457650, 457651)"
       ]
      },
-     "execution_count": 234,
+     "execution_count": 23,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1429,7 +1438,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 235,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
@@ -1438,7 +1447,7 @@
        "(3051002, 3051002)"
       ]
      },
-     "execution_count": 235,
+     "execution_count": 24,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1449,7 +1458,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 236,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1469,7 +1478,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 237,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1489,7 +1498,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 238,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1794,7 +1803,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 384,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1806,7 +1815,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 388,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1818,7 +1827,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 398,
+   "execution_count": 30,
    "metadata": {
     "scrolled": true
    },
@@ -1862,7 +1871,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 399,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1871,7 +1880,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 406,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1899,7 +1908,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 407,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [
     {
@@ -1908,7 +1917,7 @@
        "(162624, 162624)"
       ]
      },
-     "execution_count": 407,
+     "execution_count": 33,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1919,7 +1928,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 408,
+   "execution_count": 34,
    "metadata": {
     "scrolled": true
    },
@@ -1928,16 +1937,16 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "iteration 10, objective = 0.48308247\n",
-      "iteration 20, objective = 0.47053945\n",
-      "iteration 30, objective = 0.44939584\n",
-      "iteration 40, objective = 0.4501586\n",
-      "iteration 50, objective = 0.4527099\n",
-      "iteration 60, objective = 0.44800907\n",
-      "iteration 70, objective = 0.44351602\n",
-      "iteration 80, objective = 0.44241333\n",
-      "iteration 90, objective = 0.43552172\n",
-      "iteration 100, objective = 0.43790388\n"
+      "iteration 10, objective = 0.5180473\n",
+      "iteration 20, objective = 0.44682488\n",
+      "iteration 30, objective = 0.4214407\n",
+      "iteration 40, objective = 0.41395307\n",
+      "iteration 50, objective = 0.4109992\n",
+      "iteration 60, objective = 0.4033304\n",
+      "iteration 70, objective = 0.40715644\n",
+      "iteration 80, objective = 0.40649804\n",
+      "iteration 90, objective = 0.40773267\n",
+      "iteration 100, objective = 0.40059152\n"
      ]
     }
    ],
@@ -1950,18 +1959,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 409,
+   "execution_count": 46,
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "0.8603096309630963"
-      ]
-     },
-     "execution_count": 409,
-     "metadata": {},
-     "output_type": "execute_result"
+     "ename": "",
+     "evalue": "",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31mThe Kernel crashed while executing code in the the current cell or a previous cell. Please review the code in the cell(s) to identify a possible cause of the failure. Click <a href='https://aka.ms/vscodeJupyterKernelCrash'>here</a> for more info. View Jupyter <a href='command:jupyter.viewOutput'>log</a> for further details."
+     ]
     }
    ],
    "source": [
@@ -1982,7 +1989,7 @@
     "        #         p1 +=1 \n",
     "        #else:\n",
     "        rank = modelBPR.predict(userIDsAll[u], streamer_nameIDsAll[s]).numpy()\n",
-    "        if rank > 0.46:\n",
+    "        if rank > 0.47:\n",
     "            pred = 1\n",
     "            p1 +=1 \n",
     "        if pred == label:\n",
@@ -1992,38 +1999,52 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 410,
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# >0.46 = 0.862 acc\n",
+    "# >0.3 = 0.8616\n",
+    "# >0.7 = 0.8564\n",
+    "# >0.1 = 0.8186\n",
+    "# >0.59 = 0.8618\n",
+    "# >0.5 = 0.86544\n",
+    "# >0.48 = 0.8665\n",
+    "# > 0.4 = 0.8663\n",
+    "# >0.45 = 0.8663"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "(320361, 512889, 833250)"
+       "(324881, 508369, 833250)"
       ]
      },
-     "execution_count": 410,
+     "execution_count": 44,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "p1, nUserStreamers - p1, nUserStreamers"
+    "p1, nUserStreamers - p1, nUserStreamers # 309617, 523633 for 0.5"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [
     {
-     "ename": "NameError",
-     "evalue": "name 'watchedValid' is not defined",
+     "ename": "",
+     "evalue": "",
      "output_type": "error",
      "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "\u001b[1;32m/Users/garrettlam/Documents/GitHub/twitchRec/twitchRec.ipynb Cell 52\u001b[0m line \u001b[0;36m9\n\u001b[1;32m      <a href='vscode-notebook-cell:/Users/garrettlam/Documents/GitHub/twitchRec/twitchRec.ipynb#Y265sZmlsZQ%3D%3D?line=6'>7</a>\u001b[0m p1 \u001b[39m=\u001b[39m \u001b[39m0\u001b[39m  \n\u001b[1;32m      <a href='vscode-notebook-cell:/Users/garrettlam/Documents/GitHub/twitchRec/twitchRec.ipynb#Y265sZmlsZQ%3D%3D?line=7'>8</a>\u001b[0m correct \u001b[39m=\u001b[39m \u001b[39m0\u001b[39m\n\u001b[0;32m----> <a href='vscode-notebook-cell:/Users/garrettlam/Documents/GitHub/twitchRec/twitchRec.ipynb#Y265sZmlsZQ%3D%3D?line=8'>9</a>\u001b[0m \u001b[39mfor\u001b[39;00m (label,sample) \u001b[39min\u001b[39;00m [(\u001b[39m1\u001b[39m, watchedValid), (\u001b[39m0\u001b[39m, notWatchedValid)]:\n\u001b[1;32m     <a href='vscode-notebook-cell:/Users/garrettlam/Documents/GitHub/twitchRec/twitchRec.ipynb#Y265sZmlsZQ%3D%3D?line=9'>10</a>\u001b[0m     \u001b[39mfor\u001b[39;00m (u,s) \u001b[39min\u001b[39;00m sample:\n\u001b[1;32m     <a href='vscode-notebook-cell:/Users/garrettlam/Documents/GitHub/twitchRec/twitchRec.ipynb#Y265sZmlsZQ%3D%3D?line=10'>11</a>\u001b[0m         nUserStreamers \u001b[39m+\u001b[39m\u001b[39m=\u001b[39m\u001b[39m1\u001b[39m\n",
-      "\u001b[0;31mNameError\u001b[0m: name 'watchedValid' is not defined"
+      "\u001b[1;31mThe Kernel crashed while executing code in the the current cell or a previous cell. Please review the code in the cell(s) to identify a possible cause of the failure. Click <a href='https://aka.ms/vscodeJupyterKernelCrash'>here</a> for more info. View Jupyter <a href='command:jupyter.viewOutput'>log</a> for further details."
      ]
     }
    ],
