--- a/twitchRec.ipynb
+++ b/twitchRec.ipynb
@@ -6,21 +6,16 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import gzip\n",
     "import pandas as pd\n",
     "import numpy as np\n",
     "import seaborn as sns\n",
     "import matplotlib.pyplot as plt\n",
     "from collections import defaultdict\n",
-    "import csv\n",
-    "import json\n",
     "from sklearn.model_selection import train_test_split\n",
     "import random\n",
     "import math\n",
     "from sklearn.metrics import roc_curve, roc_auc_score\n",
-    "import tensorflow as tf\n",
-    "import scipy\n",
-    "# import implicit"
+    "import tensorflow as tf\n"
    ]
   },
   {
@@ -227,7 +222,7 @@
     }
    ],
    "source": [
-    "df['user_id'].nunique(), df['stream_id'].nunique(), df['streamer_name'].nunique() "
+    "df['user_id'].nunique(), df['stream_id'].nunique(), df['streamer_name'].nunique() # original checks"
    ]
   },
   {
@@ -2064,83 +2059,6 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 115,
-   "metadata": {},
-   "outputs": [
-    {
-     "ename": "KeyboardInterrupt",
-     "evalue": "",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mKeyboardInterrupt\u001b[0m                         Traceback (most recent call last)",
-      "\u001b[1;32m/Users/garrettlam/Documents/GitHub/twitchRec/twitchRec.ipynb Cell 49\u001b[0m line \u001b[0;36m2\n\u001b[1;32m     <a href='vscode-notebook-cell:/Users/garrettlam/Documents/GitHub/twitchRec/twitchRec.ipynb#Y140sZmlsZQ%3D%3D?line=19'>20</a>\u001b[0m \u001b[39m# user has been seen before\u001b[39;00m\n\u001b[1;32m     <a href='vscode-notebook-cell:/Users/garrettlam/Documents/GitHub/twitchRec/twitchRec.ipynb#Y140sZmlsZQ%3D%3D?line=20'>21</a>\u001b[0m \u001b[39melse\u001b[39;00m:\n\u001b[1;32m     <a href='vscode-notebook-cell:/Users/garrettlam/Documents/GitHub/twitchRec/twitchRec.ipynb#Y140sZmlsZQ%3D%3D?line=21'>22</a>\u001b[0m     \u001b[39mfor\u001b[39;00m s2 \u001b[39min\u001b[39;00m streamerPerUserTrain[u]:\n\u001b[0;32m---> <a href='vscode-notebook-cell:/Users/garrettlam/Documents/GitHub/twitchRec/twitchRec.ipynb#Y140sZmlsZQ%3D%3D?line=22'>23</a>\u001b[0m         sim \u001b[39m=\u001b[39m Jaccard(users,usersPerStreamerTrain[s2])\n\u001b[1;32m     <a href='vscode-notebook-cell:/Users/garrettlam/Documents/GitHub/twitchRec/twitchRec.ipynb#Y140sZmlsZQ%3D%3D?line=23'>24</a>\u001b[0m         \u001b[39mif\u001b[39;00m sim \u001b[39m==\u001b[39m \u001b[39m1\u001b[39m:\n\u001b[1;32m     <a href='vscode-notebook-cell:/Users/garrettlam/Documents/GitHub/twitchRec/twitchRec.ipynb#Y140sZmlsZQ%3D%3D?line=24'>25</a>\u001b[0m             maxSim \u001b[39m=\u001b[39m sim\n",
-      "\u001b[1;32m/Users/garrettlam/Documents/GitHub/twitchRec/twitchRec.ipynb Cell 49\u001b[0m line \u001b[0;36m3\n\u001b[1;32m      <a href='vscode-notebook-cell:/Users/garrettlam/Documents/GitHub/twitchRec/twitchRec.ipynb#Y140sZmlsZQ%3D%3D?line=0'>1</a>\u001b[0m \u001b[39mdef\u001b[39;00m \u001b[39mJaccard\u001b[39m(s1, s2):\n\u001b[1;32m      <a href='vscode-notebook-cell:/Users/garrettlam/Documents/GitHub/twitchRec/twitchRec.ipynb#Y140sZmlsZQ%3D%3D?line=1'>2</a>\u001b[0m     numer \u001b[39m=\u001b[39m \u001b[39mlen\u001b[39m(s1\u001b[39m.\u001b[39mintersection(s2))\n\u001b[0;32m----> <a href='vscode-notebook-cell:/Users/garrettlam/Documents/GitHub/twitchRec/twitchRec.ipynb#Y140sZmlsZQ%3D%3D?line=2'>3</a>\u001b[0m     denom \u001b[39m=\u001b[39m \u001b[39mlen\u001b[39m(s1\u001b[39m.\u001b[39;49munion(s2))\n\u001b[1;32m      <a href='vscode-notebook-cell:/Users/garrettlam/Documents/GitHub/twitchRec/twitchRec.ipynb#Y140sZmlsZQ%3D%3D?line=3'>4</a>\u001b[0m     \u001b[39mif\u001b[39;00m denom \u001b[39m==\u001b[39m \u001b[39m0\u001b[39m:\n\u001b[1;32m      <a href='vscode-notebook-cell:/Users/garrettlam/Documents/GitHub/twitchRec/twitchRec.ipynb#Y140sZmlsZQ%3D%3D?line=4'>5</a>\u001b[0m         \u001b[39mreturn\u001b[39;00m \u001b[39m0\u001b[39m\n",
-      "\u001b[0;31mKeyboardInterrupt\u001b[0m: "
-     ]
-    }
-   ],
-   "source": [
-    "# # Jaccard + Popularity FPRs and TPRs for AUC (TEST DATA)\n",
-    "# jaccardPop_FPRs = []\n",
-    "# jaccardPop_TPRs = []\n",
-    "\n",
-    "# thresholds = [0, 0.01, 0.02, 0.03, 0.04, 0.05, 0.06, 0.07, 0.08, 0.09, 0.1]\n",
-    "\n",
-    "# for threshold in thresholds:\n",
-    "#     TP, TN, FP, FN = 0, 0, 0, 0\n",
-    "#     for (label,sample) in [(1, watchedTest), (0, notWatchedTest)]: \n",
-    "#         for (u,s) in sample:\n",
-    "#             maxSim = float('-inf')\n",
-    "#             users = usersPerStreamerTrain[s]\n",
-    "#             pred = 0\n",
-    "\n",
-    "#             # cold-start user, just consider popularity of stream\n",
-    "#             if u not in streamerPerUserTrain:\n",
-    "#                 if len(usersPerStreamerTrain[s]) > 10:\n",
-    "#                     pred = 1\n",
-    "#                     p1 += 1\n",
-    "#             # user has been seen before\n",
-    "#             else:\n",
-    "#                 for s2 in streamerPerUserTrain[u]:\n",
-    "#                     sim = Jaccard(users,usersPerStreamerTrain[s2])\n",
-    "#                     if sim == 1:\n",
-    "#                         maxSim = sim\n",
-    "#                         break\n",
-    "#                     if sim > maxSim:\n",
-    "#                         maxSim = sim\n",
-    "#                 if maxSim > threshold or len(usersPerStreamerTrain[s]) > 10:\n",
-    "#                     pred = 1\n",
-    "#                     p1 += 1\n",
-    "            \n",
-    "#             if pred == 1 and label == 1:\n",
-    "#                 TP += 1\n",
-    "#             elif pred == 0 and label == 0:\n",
-    "#                 TN += 1\n",
-    "#             elif pred == 1 and label == 0:\n",
-    "#                 FP += 1\n",
-    "#             elif pred == 0 and label == 1:\n",
-    "#                 FN += 1\n",
-    "\n",
-    "#     tpr = TP / (TP + FN)\n",
-    "#     fpr = FP / (FP + TN)\n",
-    "\n",
-    "#     jaccardPop_TPRs.append(tpr)\n",
-    "#     jaccardPop_FPRs.append(fpr)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# jaccardPop_AUC = auc(jaccardPop_FPRs, jaccardPop_TPRs)\n",
-    "# jaccardPop_AUC"
-   ]
-  },
-  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -2321,112 +2239,6 @@
     "# CosinePop AUC\n",
     "cosinePop_AUC = round(roc_auc_score(yTest, cosinePopLabels), 3)\n",
     "cosinePop_AUC"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 126,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# # Cosine + Popularity FPRs and TPRs for AUC (TEST DATA)\n",
-    "# cosinePop_FPRs = []\n",
-    "# cosinePop_TPRs = []\n",
-    "\n",
-    "# #thresholds = [0, 0.02, 0.04, 0.06, 0.08, 0.1, 0.12, 0.14, 0.16, 0.18, 0.2]\n",
-    "# thresholds = [0, 0.02, 0.04, 0.06, 0.08, 0.1, 1, 2, 3, 4, 5, 6]\n",
-    "\n",
-    "# for threshold in thresholds:\n",
-    "#     TP, TN, FP, FN = 0, 0, 0, 0\n",
-    "#     for (label,sample) in [(1, watchedTest), (0, notWatchedTest)]: \n",
-    "#         for (u,s) in sample:\n",
-    "#             maxSim = float('-inf')\n",
-    "#             users = usersPerStreamerTrain[s]\n",
-    "#             pred = 0\n",
-    "\n",
-    "#             # cold-start user, just consider popularity of stream\n",
-    "#             if u not in streamerPerUserTrain:\n",
-    "#                 if len(usersPerStreamerTrain[s]) > 10:\n",
-    "#                     pred = 1\n",
-    "#                     p1 += 1\n",
-    "#             # user has been seen before\n",
-    "#             else:\n",
-    "#                 for s2 in streamerPerUserTrain[u]:\n",
-    "#                     sim = CosineSet(users,usersPerStreamerTrain[s2])\n",
-    "#                     if sim > maxSim:\n",
-    "#                         maxSim = sim\n",
-    "#                     if maxSim >= 0.9999:\n",
-    "#                         break\n",
-    "#                 if maxSim > threshold or len(usersPerStreamerTrain[s]) > 10:\n",
-    "#                     pred = 1\n",
-    "#                     p1 += 1\n",
-    "            \n",
-    "#             if pred == 1 and label == 1:\n",
-    "#                 TP += 1\n",
-    "#             elif pred == 0 and label == 0:\n",
-    "#                 TN += 1\n",
-    "#             elif pred == 1 and label == 0:\n",
-    "#                 FP += 1\n",
-    "#             elif pred == 0 and label == 1:\n",
-    "#                 FN += 1\n",
-    "\n",
-    "#     tpr = TP / (TP + FN)\n",
-    "#     fpr = FP / (FP + TN)\n",
-    "\n",
-    "#     cosinePop_TPRs.append(tpr)\n",
-    "#     cosinePop_FPRs.append(fpr)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 127,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "0.12208108734635606"
-      ]
-     },
-     "execution_count": 127,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "# cosinePop_AUC = auc(cosinePop_FPRs, cosinePop_TPRs)\n",
-    "# cosinePop_AUC"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 128,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "[0.9400524201711113,\n",
-       " 0.9342510414779931,\n",
-       " 0.9288065887467104,\n",
-       " 0.9245900678692053,\n",
-       " 0.9210767444090479,\n",
-       " 0.9178617471259469,\n",
-       " 0.8290910640655466,\n",
-       " 0.8160872390977764,\n",
-       " 0.8160872390977764,\n",
-       " 0.8160872390977764,\n",
-       " 0.8160872390977764,\n",
-       " 0.8160872390977764]"
-      ]
-     },
-     "execution_count": 128,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "# cosinePop_TPRs"
    ]
   },
   {
