--- a/twitchRec.ipynb
+++ b/twitchRec.ipynb
@@ -2607,7 +2607,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 63,
    "metadata": {},
    "outputs": [
     {
@@ -2656,7 +2656,7 @@
        "      <td>0.921</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>BPR</th>\n",
+       "      <th>BPR + Popularity</th>\n",
        "      <td>0.872156</td>\n",
        "      <td>0.872903</td>\n",
        "      <td>0.867</td>\n",
@@ -2670,10 +2670,10 @@
        "Popularity                    0.876413         0.876930  0.872\n",
        "Jaccard + Popularity          0.919149         0.919220  0.918\n",
        "Cosine + Popularity           0.921047         0.921069  0.921\n",
-       "BPR                           0.872156         0.872903  0.867"
+       "BPR + Popularity              0.872156         0.872903  0.867"
       ]
      },
-     "execution_count": 60,
+     "execution_count": 63,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2683,7 +2683,7 @@
     "    'Popularity': {'Accuracy (valid)': pop_accValid, 'Accuracy (test)': pop_accTest, 'AUC': pop_AUC},\n",
     "    'Jaccard + Popularity': {'Accuracy (valid)': jaccardPop_accValid, 'Accuracy (test)': jaccardPop_accTest, 'AUC': jaccardPop_AUC},\n",
     "    'Cosine + Popularity': {'Accuracy (valid)': cosinePop_accValid, 'Accuracy (test)': cosinePop_accTest, 'AUC': cosinePop_AUC},\n",
-    "    'BPR': {'Accuracy (valid)': bpr_accValid, 'Accuracy (test)': bpr_accTest, 'AUC': bpr_AUC},\n",
+    "    'BPR + Popularity': {'Accuracy (valid)': bpr_accValid, 'Accuracy (test)': bpr_accTest, 'AUC': bpr_AUC},\n",
     "}\n",
     "\n",
     "results_df = pd.DataFrame(results).T\n",
